Remove spaces in variable names

--- a/Import_QCed_telemetry_to_netcdf_refactor.ipynb
+++ b/Import_QCed_telemetry_to_netcdf_refactor.ipynb
@@ -197,34 +197,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Soil Moisture D\n",
       "Wind Direction at A\n",
-      "Snow Depth A\n",
-      "Soil Temperature A\n",
-      "Accumulated Precipitaiton A\n",
       "Snow Water Equivelent A\n",
-      "Soil Temperature E\n",
-      "Upward Terrestrial Rad.\n",
-      "Soil Moisture C\n",
-      "Upward Soloar Radiation\n",
-      "Soil Temperature C\n",
-      "Scalar Wind Speed B\n",
-      "Downward Solar Radiation\n",
-      "Air Moisture Content A\n",
-      "Incremental Precipitation B\n",
-      "Net Radiation\n",
-      "Downward Terrestrial Rad.\n",
       "Soil Heat Flux  (1\n",
+      "Accumulated Precipitaiton A\n",
+      "Soil Temperature A\n",
+      "Total Pressure adjusted to sea-level\n",
+      "Soil Temperature C\n",
+      "Net Radiation\n",
+      "Snow Depth A\n",
       "Air temperature A\n",
       "Soil Moisture A\n",
-      "Soil Temperature D\n",
-      "Snow Depth QC value\n",
-      "Scalar Wind Speed A\n",
       "Soil Moisture E\n",
-      "Soil Moisture B\n",
-      "Soil Moisture D\n",
+      "Soil Moisture C\n",
+      "Air Moisture Content A\n",
       "Soil Temperature B\n",
-      "Total Pressure adjusted to sea-level\n",
-      "Albedo\n"
+      "Soil Moisture B\n",
+      "Downward Solar Radiation\n",
+      "Snow Depth QC value\n",
+      "Incremental Precipitation B\n",
+      "Upward Soloar Radiation\n",
+      "Downward Terrestrial Rad.\n",
+      "Upward Terrestrial Rad.\n",
+      "Soil Temperature D\n",
+      "Scalar Wind Speed A\n",
+      "Scalar Wind Speed B\n",
+      "Albedo\n",
+      "Soil Temperature E\n"
      ]
     }
    ],
@@ -273,34 +273,34 @@
        "  * station                               (station) object 'BNS' 'CRN' 'FRS' ...\n",
        "  * time                                  (time) object 1412121600000000000 ...\n",
        "Data variables:\n",
+       "    Soil Moisture D                       (station, time) float64 0.297 ...\n",
        "    Wind Direction at A                   (station, time) float64 -9.999e+03 ...\n",
-       "    Snow Depth A                          (station, time) float64 -9.999e+03 ...\n",
-       "    Soil Temperature A                    (station, time) float64 3.098 ...\n",
-       "    Accumulated Precipitaiton A           (station, time) float64 -9.999e+03 ...\n",
        "    Snow Water Equivelent A               (station, time) float64 -9.999e+03 ...\n",
-       "    Soil Temperature E                    (station, time) float64 4.396 ...\n",
-       "    Upward Terrestrial Rad.               (station, time) float64 292.6 ...\n",
-       "    Soil Moisture C                       (station, time) float64 0.174 ...\n",
-       "    Upward Soloar Radiation               (station, time) float64 -9.999e+03 ...\n",
-       "    Soil Temperature C                    (station, time) float64 5.208 ...\n",
-       "    Scalar Wind Speed B                   (station, time) float64 -9.999e+03 ...\n",
-       "    Downward Solar Radiation              (station, time) float64 0.0 0.0 ...\n",
-       "    Air Moisture Content A                (station, time) float64 89.3 91.7 ...\n",
-       "    Incremental Precipitation B           (station, time) float64 0.0 0.0 ...\n",
-       "    Net Radiation                         (station, time) float64 -9.999e+03 ...\n",
-       "    Downward Terrestrial Rad.             (station, time) float64 305.6 ...\n",
        "    Soil Heat Flux  (1                    (station, time) float64 -46.8 ...\n",
+       "    Accumulated Precipitaiton A           (station, time) float64 -9.999e+03 ...\n",
+       "    Soil Temperature A                    (station, time) float64 3.098 ...\n",
+       "    Total Pressure adjusted to sea-level  (station, time) float64 -9.999e+03 ...\n",
+       "    Soil Temperature C                    (station, time) float64 5.208 ...\n",
+       "    Net Radiation                         (station, time) float64 -9.999e+03 ...\n",
+       "    Snow Depth A                          (station, time) float64 -9.999e+03 ...\n",
        "    Air temperature A                     (station, time) float64 -0.888 ...\n",
        "    Soil Moisture A                       (station, time) float64 0.325 ...\n",
-       "    Soil Temperature D                    (station, time) float64 4.791 ...\n",
-       "    Snow Depth QC value                   (station, time) float64 -9.999e+03 ...\n",
-       "    Scalar Wind Speed A                   (station, time) float64 0.0 0.0 ...\n",
        "    Soil Moisture E                       (station, time) float64 0.209 ...\n",
-       "    Soil Moisture B                       (station, time) float64 0.316 ...\n",
-       "    Soil Moisture D                       (station, time) float64 0.297 ...\n",
+       "    Soil Moisture C                       (station, time) float64 0.174 ...\n",
+       "    Air Moisture Content A                (station, time) float64 89.3 91.7 ...\n",
        "    Soil Temperature B                    (station, time) float64 5.117 ...\n",
-       "    Total Pressure adjusted to sea-level  (station, time) float64 -9.999e+03 ...\n",
-       "    Albedo                                (station, time) float64 -9.999e+03 ..."
+       "    Soil Moisture B                       (station, time) float64 0.316 ...\n",
+       "    Downward Solar Radiation              (station, time) float64 0.0 0.0 ...\n",
+       "    Snow Depth QC value                   (station, time) float64 -9.999e+03 ...\n",
+       "    Incremental Precipitation B           (station, time) float64 0.0 0.0 ...\n",
+       "    Upward Soloar Radiation               (station, time) float64 -9.999e+03 ...\n",
+       "    Downward Terrestrial Rad.             (station, time) float64 305.6 ...\n",
+       "    Upward Terrestrial Rad.               (station, time) float64 292.6 ...\n",
+       "    Soil Temperature D                    (station, time) float64 4.791 ...\n",
+       "    Scalar Wind Speed A                   (station, time) float64 0.0 0.0 ...\n",
+       "    Scalar Wind Speed B                   (station, time) float64 -9.999e+03 ...\n",
+       "    Albedo                                (station, time) float64 -9.999e+03 ...\n",
+       "    Soil Temperature E                    (station, time) float64 4.396 ..."
       ]
      },
      "execution_count": 11,
@@ -317,20 +317,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# Add variable attributes (units)\n",
+    "# Add variable attributes (units), and fix variable names (remove spaces)\n",
     "for cvar in ds_all.data_vars:\n",
-    "    ds_all.get(cvar).attrs['unit']   = units_all[cvar]"
+    "    # add units as attributes\n",
+    "    ds_all.get(cvar).attrs['unit']   = units_all[cvar]\n",
+    "    # Remove spaces in variable names\n",
+    "    ds_all.rename({cvar:cvar.replace(\" \",\"\")},inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {
     "collapsed": true
    },
@@ -339,6 +351,15 @@
     "# Export to netcdf\n",
     "ds_all.to_netcdf(cfileout,format='netcdf4') "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
