Fixed netcdf combin and added plot check script

--- a/Import_QCed_telemetry_to_netcdf_refactor.ipynb
+++ b/Import_QCed_telemetry_to_netcdf_refactor.ipynb
@@ -148,6 +148,9 @@
     "    dat = ascii.read(cfile,header_start=c_column_line,data_start=c_header,delimiter=c_delimiter,exclude_names='N/A')\n",
     "    datain = pd.DataFrame(dat.as_array())\n",
     "    \n",
+    "    # Replace -9999 with nan (recomended by netcdf)\n",
+    "    datain.replace(-9999,np.NaN,inplace=True)\n",
+    "    \n",
     "    # Make TIMESTAMP the index\n",
     "    datain['TIMESTAMP'] = datain['TIMESTAMP'].astype('datetime64[ns]')\n",
     "    datain = datain.set_index('TIMESTAMP')\n",
@@ -176,6 +179,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {
     "collapsed": false
@@ -197,34 +218,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Soil Moisture D\n",
-      "Wind Direction at A\n",
-      "Snow Water Equivelent A\n",
-      "Soil Heat Flux  (1\n",
-      "Accumulated Precipitaiton A\n",
-      "Soil Temperature A\n",
-      "Total Pressure adjusted to sea-level\n",
-      "Soil Temperature C\n",
-      "Net Radiation\n",
-      "Snow Depth A\n",
-      "Air temperature A\n",
-      "Soil Moisture A\n",
-      "Soil Moisture E\n",
-      "Soil Moisture C\n",
       "Air Moisture Content A\n",
-      "Soil Temperature B\n",
-      "Soil Moisture B\n",
-      "Downward Solar Radiation\n",
-      "Snow Depth QC value\n",
       "Incremental Precipitation B\n",
-      "Upward Soloar Radiation\n",
-      "Downward Terrestrial Rad.\n",
-      "Upward Terrestrial Rad.\n",
-      "Soil Temperature D\n",
+      "Soil Heat Flux  A\n",
+      "Soil Moisture C\n",
       "Scalar Wind Speed A\n",
+      "Soil Temperature B\n",
+      "Soil Temperature C\n",
+      "Soil Temperature D\n",
+      "Soil Temperature A\n",
+      "Snow Depth A\n",
+      "Snow Depth QC value\n",
+      "Wind Direction at A\n",
+      "Incremental Precipitation A\n",
+      "Snow Water Equivelent A\n",
+      "Downward Solar Radiation\n",
+      "Upward Terrestrial Rad\n",
+      "Upward Solar Radiation\n",
       "Scalar Wind Speed B\n",
+      "Downward Terrestrial Rad\n",
+      "Soil Moisture A\n",
+      "Total Pressure adjusted to sea-level\n",
+      "Soil Moisture B\n",
+      "Soil Moisture D\n",
+      "Net Radiation\n",
       "Albedo\n",
-      "Soil Temperature E\n"
+      "Air temperature A\n",
+      "Soil Temperature E\n",
+      "Soil Moisture E\n"
      ]
     }
    ],
@@ -245,15 +266,16 @@
     "        else: # Variable doesn't exists at this station so pad it with -9999 (needed to merge into one netcdf file)\n",
     "            index_csta = time_index[c_sta]\n",
     "            df_missing = pd.DataFrame(index=index_csta, columns=[c_var])\n",
-    "            df_missing = df_missing.fillna(-9999)\n",
+    "            #df_missing = df_missing.fillna(-9999)\n",
     "            all_vars[c_sta] = df_missing\n",
     "\n",
     "    # Concatenate each variable by stations\n",
     "    c_obs_all = pd.concat(all_vars,axis=0,keys=stations_all)\n",
-    "    c_obs_all = pd.DataFrame(c_obs_all)\n",
+    "    #c_obs_all = pd.DataFrame(c_obs_all) # not needed\n",
     "    \n",
     "    # Convert to xray and add to list\n",
     "    ds = xr.Dataset.from_dataframe(c_obs_all)\n",
+    "    # Add to list and rename variables\n",
     "    ds_list.append(ds.rename({'level_0':'station','TIMESTAMP':'time'}))  "
    ]
   },
@@ -268,39 +290,39 @@
      "data": {
       "text/plain": [
        "<xarray.Dataset>\n",
-       "Dimensions:                               (station: 4, time: 50980)\n",
+       "Dimensions:                               (station: 4, time: 64132)\n",
        "Coordinates:\n",
        "  * station                               (station) object 'BNS' 'CRN' 'FRS' ...\n",
-       "  * time                                  (time) object 1412121600000000000 ...\n",
+       "  * time                                  (time) object 1412100000000000000 ...\n",
        "Data variables:\n",
-       "    Soil Moisture D                       (station, time) float64 0.297 ...\n",
-       "    Wind Direction at A                   (station, time) float64 -9.999e+03 ...\n",
-       "    Snow Water Equivelent A               (station, time) float64 -9.999e+03 ...\n",
-       "    Soil Heat Flux  (1                    (station, time) float64 -46.8 ...\n",
-       "    Accumulated Precipitaiton A           (station, time) float64 -9.999e+03 ...\n",
-       "    Soil Temperature A                    (station, time) float64 3.098 ...\n",
-       "    Total Pressure adjusted to sea-level  (station, time) float64 -9.999e+03 ...\n",
-       "    Soil Temperature C                    (station, time) float64 5.208 ...\n",
-       "    Net Radiation                         (station, time) float64 -9.999e+03 ...\n",
-       "    Snow Depth A                          (station, time) float64 -9.999e+03 ...\n",
-       "    Air temperature A                     (station, time) float64 -0.888 ...\n",
-       "    Soil Moisture A                       (station, time) float64 0.325 ...\n",
-       "    Soil Moisture E                       (station, time) float64 0.209 ...\n",
-       "    Soil Moisture C                       (station, time) float64 0.174 ...\n",
        "    Air Moisture Content A                (station, time) float64 89.3 91.7 ...\n",
-       "    Soil Temperature B                    (station, time) float64 5.117 ...\n",
-       "    Soil Moisture B                       (station, time) float64 0.316 ...\n",
-       "    Downward Solar Radiation              (station, time) float64 0.0 0.0 ...\n",
-       "    Snow Depth QC value                   (station, time) float64 -9.999e+03 ...\n",
        "    Incremental Precipitation B           (station, time) float64 0.0 0.0 ...\n",
-       "    Upward Soloar Radiation               (station, time) float64 -9.999e+03 ...\n",
-       "    Downward Terrestrial Rad.             (station, time) float64 305.6 ...\n",
-       "    Upward Terrestrial Rad.               (station, time) float64 292.6 ...\n",
-       "    Soil Temperature D                    (station, time) float64 4.791 ...\n",
+       "    Soil Heat Flux  A                     (station, time) float64 -12.24 ...\n",
+       "    Soil Moisture C                       (station, time) float64 0.174 ...\n",
        "    Scalar Wind Speed A                   (station, time) float64 0.0 0.0 ...\n",
-       "    Scalar Wind Speed B                   (station, time) float64 -9.999e+03 ...\n",
-       "    Albedo                                (station, time) float64 -9.999e+03 ...\n",
-       "    Soil Temperature E                    (station, time) float64 4.396 ..."
+       "    Soil Temperature B                    (station, time) float64 5.117 ...\n",
+       "    Soil Temperature C                    (station, time) float64 5.208 ...\n",
+       "    Soil Temperature D                    (station, time) float64 4.791 ...\n",
+       "    Soil Temperature A                    (station, time) float64 3.098 ...\n",
+       "    Snow Depth A                          (station, time) float64 nan nan ...\n",
+       "    Snow Depth QC value                   (station, time) float64 nan nan ...\n",
+       "    Wind Direction at A                   (station, time) float64 nan nan ...\n",
+       "    Incremental Precipitation A           (station, time) float64 0.0 0.0 ...\n",
+       "    Snow Water Equivelent A               (station, time) float64 nan nan ...\n",
+       "    Downward Solar Radiation              (station, time) float64 0.0 0.0 ...\n",
+       "    Upward Terrestrial Rad                (station, time) float64 292.6 ...\n",
+       "    Upward Solar Radiation                (station, time) float64 nan nan ...\n",
+       "    Scalar Wind Speed B                   (station, time) float64 nan nan ...\n",
+       "    Downward Terrestrial Rad              (station, time) float64 305.6 ...\n",
+       "    Soil Moisture A                       (station, time) float64 0.325 ...\n",
+       "    Total Pressure adjusted to sea-level  (station, time) float64 nan nan ...\n",
+       "    Soil Moisture B                       (station, time) float64 0.316 ...\n",
+       "    Soil Moisture D                       (station, time) float64 0.297 ...\n",
+       "    Net Radiation                         (station, time) float64 nan nan ...\n",
+       "    Albedo                                (station, time) float64 nan nan ...\n",
+       "    Air temperature A                     (station, time) float64 -0.888 ...\n",
+       "    Soil Temperature E                    (station, time) float64 4.396 ...\n",
+       "    Soil Moisture E                       (station, time) float64 0.209 ..."
       ]
      },
      "execution_count": 11,
@@ -317,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -333,6 +355,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Tell xray TIMESTAMP is a datetime (it forgets for some reason)\n",
+    "ds_all['time'] = pd.to_datetime(ds_all.time)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": false
@@ -342,15 +376,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<xarray.Dataset>\n",
+       "Dimensions:                           (station: 4, time: 64132)\n",
+       "Coordinates:\n",
+       "  * station                           (station) object 'BNS' 'CRN' 'FRS' 'PWL'\n",
+       "  * time                              (time) datetime64[ns] 2014-09-30T18:00:00 ...\n",
+       "Data variables:\n",
+       "    AirMoistureContentA               (station, time) float64 89.3 91.7 90.9 ...\n",
+       "    IncrementalPrecipitationB         (station, time) float64 0.0 0.0 0.0 ...\n",
+       "    SoilHeatFluxA                     (station, time) float64 -12.24 -12.13 ...\n",
+       "    SoilMoistureC                     (station, time) float64 0.174 0.174 ...\n",
+       "    ScalarWindSpeedA                  (station, time) float64 0.0 0.0 0.0 ...\n",
+       "    SoilTemperatureB                  (station, time) float64 5.117 5.107 ...\n",
+       "    SoilTemperatureC                  (station, time) float64 5.208 5.189 ...\n",
+       "    SoilTemperatureD                  (station, time) float64 4.791 4.779 ...\n",
+       "    SoilTemperatureA                  (station, time) float64 3.098 3.142 ...\n",
+       "    SnowDepthA                        (station, time) float64 nan nan nan ...\n",
+       "    SnowDepthQCvalue                  (station, time) float64 nan nan nan ...\n",
+       "    WindDirectionatA                  (station, time) float64 nan nan nan ...\n",
+       "    IncrementalPrecipitationA         (station, time) float64 0.0 0.0 0.0 ...\n",
+       "    SnowWaterEquivelentA              (station, time) float64 nan nan nan ...\n",
+       "    DownwardSolarRadiation            (station, time) float64 0.0 0.0 0.0 ...\n",
+       "    UpwardTerrestrialRad              (station, time) float64 292.6 291.6 ...\n",
+       "    UpwardSolarRadiation              (station, time) float64 nan nan 0.3234 ...\n",
+       "    ScalarWindSpeedB                  (station, time) float64 nan nan nan ...\n",
+       "    DownwardTerrestrialRad            (station, time) float64 305.6 304.8 ...\n",
+       "    SoilMoistureA                     (station, time) float64 0.325 0.325 ...\n",
+       "    TotalPressureadjustedtosea-level  (station, time) float64 nan nan nan ...\n",
+       "    SoilMoistureB                     (station, time) float64 0.316 0.316 ...\n",
+       "    SoilMoistureD                     (station, time) float64 0.297 0.297 ...\n",
+       "    NetRadiation                      (station, time) float64 nan nan nan ...\n",
+       "    Albedo                            (station, time) float64 nan nan nan ...\n",
+       "    AirtemperatureA                   (station, time) float64 -0.888 -1.255 ...\n",
+       "    SoilTemperatureE                  (station, time) float64 4.396 4.433 ...\n",
+       "    SoilMoistureE                     (station, time) float64 0.209 0.209 ..."
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ds_all"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "# Export to netcdf\n",
     "ds_all.to_netcdf(cfileout,format='netcdf4') "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
