minor plotting fixes

--- a/Import_QCed_telemetry_to_netcdf_refactor.ipynb
+++ b/Import_QCed_telemetry_to_netcdf_refactor.ipynb
@@ -218,34 +218,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Air Moisture Content A\n",
-      "Incremental Precipitation B\n",
-      "Soil Heat Flux  A\n",
-      "Soil Moisture C\n",
-      "Scalar Wind Speed A\n",
-      "Soil Temperature B\n",
-      "Soil Temperature C\n",
-      "Soil Temperature D\n",
-      "Soil Temperature A\n",
-      "Snow Depth A\n",
-      "Snow Depth QC value\n",
-      "Wind Direction at A\n",
-      "Incremental Precipitation A\n",
       "Snow Water Equivelent A\n",
-      "Downward Solar Radiation\n",
-      "Upward Terrestrial Rad\n",
-      "Upward Solar Radiation\n",
-      "Scalar Wind Speed B\n",
-      "Downward Terrestrial Rad\n",
-      "Soil Moisture A\n",
-      "Total Pressure adjusted to sea-level\n",
-      "Soil Moisture B\n",
-      "Soil Moisture D\n",
       "Net Radiation\n",
+      "Total Pressure unadjusted A\n",
+      "Total Pressure adjusted to sea-level\n",
+      "Soil Temperature C\n",
+      "Incremental Precipitation A\n",
+      "Soil Temperature D\n",
+      "Air Moisture Content A\n",
+      "Soil Temperature B\n",
+      "Incremental Precipitation B\n",
+      "Soil Temperature A\n",
       "Albedo\n",
+      "Scalar Wind Speed A\n",
+      "Soil Moisture A\n",
+      "Upward Solar Radiation\n",
+      "Downward Solar Radiation\n",
       "Air temperature A\n",
+      "Upward Terrestrial Rad\n",
+      "Snow Depth QC value\n",
       "Soil Temperature E\n",
-      "Soil Moisture E\n"
+      "Soil Moisture C\n",
+      "Scalar Wind Speed B\n",
+      "Soil Heat Flux  A\n",
+      "Wind Direction at A\n",
+      "Soil Moisture E\n",
+      "Soil Moisture B\n",
+      "Downward Terrestrial Rad\n",
+      "Snow Depth A\n",
+      "Soil Moisture D\n"
      ]
     }
    ],
@@ -290,39 +291,40 @@
      "data": {
       "text/plain": [
        "<xarray.Dataset>\n",
-       "Dimensions:                               (station: 4, time: 64132)\n",
+       "Dimensions:                               (station: 4, time: 131425)\n",
        "Coordinates:\n",
        "  * station                               (station) object 'BNS' 'CRN' 'FRS' ...\n",
-       "  * time                                  (time) object 1412100000000000000 ...\n",
+       "  * time                                  (time) object 1349028000000000000 ...\n",
        "Data variables:\n",
-       "    Air Moisture Content A                (station, time) float64 89.3 91.7 ...\n",
-       "    Incremental Precipitation B           (station, time) float64 0.0 0.0 ...\n",
-       "    Soil Heat Flux  A                     (station, time) float64 -12.24 ...\n",
-       "    Soil Moisture C                       (station, time) float64 0.174 ...\n",
-       "    Scalar Wind Speed A                   (station, time) float64 0.0 0.0 ...\n",
-       "    Soil Temperature B                    (station, time) float64 5.117 ...\n",
-       "    Soil Temperature C                    (station, time) float64 5.208 ...\n",
-       "    Soil Temperature D                    (station, time) float64 4.791 ...\n",
-       "    Soil Temperature A                    (station, time) float64 3.098 ...\n",
-       "    Snow Depth A                          (station, time) float64 nan nan ...\n",
-       "    Snow Depth QC value                   (station, time) float64 nan nan ...\n",
-       "    Wind Direction at A                   (station, time) float64 nan nan ...\n",
-       "    Incremental Precipitation A           (station, time) float64 0.0 0.0 ...\n",
        "    Snow Water Equivelent A               (station, time) float64 nan nan ...\n",
-       "    Downward Solar Radiation              (station, time) float64 0.0 0.0 ...\n",
-       "    Upward Terrestrial Rad                (station, time) float64 292.6 ...\n",
-       "    Upward Solar Radiation                (station, time) float64 nan nan ...\n",
-       "    Scalar Wind Speed B                   (station, time) float64 nan nan ...\n",
-       "    Downward Terrestrial Rad              (station, time) float64 305.6 ...\n",
-       "    Soil Moisture A                       (station, time) float64 0.325 ...\n",
-       "    Total Pressure adjusted to sea-level  (station, time) float64 nan nan ...\n",
-       "    Soil Moisture B                       (station, time) float64 0.316 ...\n",
-       "    Soil Moisture D                       (station, time) float64 0.297 ...\n",
        "    Net Radiation                         (station, time) float64 nan nan ...\n",
+       "    Total Pressure unadjusted A           (station, time) float64 nan nan ...\n",
+       "    Total Pressure adjusted to sea-level  (station, time) float64 nan nan ...\n",
+       "    Soil Temperature C                    (station, time) float64 nan nan ...\n",
+       "    Incremental Precipitation A           (station, time) float64 nan nan ...\n",
+       "    Soil Temperature D                    (station, time) float64 nan nan ...\n",
+       "    Air Moisture Content A                (station, time) float64 nan nan ...\n",
+       "    Soil Temperature B                    (station, time) float64 nan nan ...\n",
+       "    Incremental Precipitation B           (station, time) float64 nan nan ...\n",
+       "    Soil Temperature A                    (station, time) float64 nan nan ...\n",
        "    Albedo                                (station, time) float64 nan nan ...\n",
-       "    Air temperature A                     (station, time) float64 -0.888 ...\n",
-       "    Soil Temperature E                    (station, time) float64 4.396 ...\n",
-       "    Soil Moisture E                       (station, time) float64 0.209 ..."
+       "    Scalar Wind Speed A                   (station, time) float64 nan nan ...\n",
+       "    Soil Moisture A                       (station, time) float64 nan nan ...\n",
+       "    Upward Solar Radiation                (station, time) float64 nan nan ...\n",
+       "    Downward Solar Radiation              (station, time) float64 nan nan ...\n",
+       "    Air temperature A                     (station, time) float64 nan nan ...\n",
+       "    Upward Terrestrial Rad                (station, time) float64 nan nan ...\n",
+       "    Snow Depth QC value                   (station, time) float64 nan nan ...\n",
+       "    Soil Temperature E                    (station, time) float64 nan nan ...\n",
+       "    Soil Moisture C                       (station, time) float64 nan nan ...\n",
+       "    Scalar Wind Speed B                   (station, time) float64 nan nan ...\n",
+       "    Soil Heat Flux  A                     (station, time) float64 nan nan ...\n",
+       "    Wind Direction at A                   (station, time) float64 nan nan ...\n",
+       "    Soil Moisture E                       (station, time) float64 nan nan ...\n",
+       "    Soil Moisture B                       (station, time) float64 nan nan ...\n",
+       "    Downward Terrestrial Rad              (station, time) float64 nan nan ...\n",
+       "    Snow Depth A                          (station, time) float64 nan nan ...\n",
+       "    Soil Moisture D                       (station, time) float64 nan nan ..."
       ]
      },
      "execution_count": 11,
@@ -386,39 +388,40 @@
      "data": {
       "text/plain": [
        "<xarray.Dataset>\n",
-       "Dimensions:                           (station: 4, time: 64132)\n",
+       "Dimensions:                           (station: 4, time: 131425)\n",
        "Coordinates:\n",
        "  * station                           (station) object 'BNS' 'CRN' 'FRS' 'PWL'\n",
-       "  * time                              (time) datetime64[ns] 2014-09-30T18:00:00 ...\n",
+       "  * time                              (time) datetime64[ns] 2012-09-30T18:00:00 ...\n",
        "Data variables:\n",
-       "    AirMoistureContentA               (station, time) float64 89.3 91.7 90.9 ...\n",
-       "    IncrementalPrecipitationB         (station, time) float64 0.0 0.0 0.0 ...\n",
-       "    SoilHeatFluxA                     (station, time) float64 -12.24 -12.13 ...\n",
-       "    SoilMoistureC                     (station, time) float64 0.174 0.174 ...\n",
-       "    ScalarWindSpeedA                  (station, time) float64 0.0 0.0 0.0 ...\n",
-       "    SoilTemperatureB                  (station, time) float64 5.117 5.107 ...\n",
-       "    SoilTemperatureC                  (station, time) float64 5.208 5.189 ...\n",
-       "    SoilTemperatureD                  (station, time) float64 4.791 4.779 ...\n",
-       "    SoilTemperatureA                  (station, time) float64 3.098 3.142 ...\n",
-       "    SnowDepthA                        (station, time) float64 nan nan nan ...\n",
-       "    SnowDepthQCvalue                  (station, time) float64 nan nan nan ...\n",
-       "    WindDirectionatA                  (station, time) float64 nan nan nan ...\n",
-       "    IncrementalPrecipitationA         (station, time) float64 0.0 0.0 0.0 ...\n",
        "    SnowWaterEquivelentA              (station, time) float64 nan nan nan ...\n",
-       "    DownwardSolarRadiation            (station, time) float64 0.0 0.0 0.0 ...\n",
-       "    UpwardTerrestrialRad              (station, time) float64 292.6 291.6 ...\n",
-       "    UpwardSolarRadiation              (station, time) float64 nan nan 0.3234 ...\n",
-       "    ScalarWindSpeedB                  (station, time) float64 nan nan nan ...\n",
-       "    DownwardTerrestrialRad            (station, time) float64 305.6 304.8 ...\n",
-       "    SoilMoistureA                     (station, time) float64 0.325 0.325 ...\n",
-       "    TotalPressureadjustedtosea-level  (station, time) float64 nan nan nan ...\n",
-       "    SoilMoistureB                     (station, time) float64 0.316 0.316 ...\n",
-       "    SoilMoistureD                     (station, time) float64 0.297 0.297 ...\n",
        "    NetRadiation                      (station, time) float64 nan nan nan ...\n",
+       "    TotalPressureunadjustedA          (station, time) float64 nan nan nan ...\n",
+       "    TotalPressureadjustedtosea-level  (station, time) float64 nan nan nan ...\n",
+       "    SoilTemperatureC                  (station, time) float64 nan nan nan ...\n",
+       "    IncrementalPrecipitationA         (station, time) float64 nan nan nan ...\n",
+       "    SoilTemperatureD                  (station, time) float64 nan nan nan ...\n",
+       "    AirMoistureContentA               (station, time) float64 nan nan nan ...\n",
+       "    SoilTemperatureB                  (station, time) float64 nan nan nan ...\n",
+       "    IncrementalPrecipitationB         (station, time) float64 nan nan nan ...\n",
+       "    SoilTemperatureA                  (station, time) float64 nan nan nan ...\n",
        "    Albedo                            (station, time) float64 nan nan nan ...\n",
-       "    AirtemperatureA                   (station, time) float64 -0.888 -1.255 ...\n",
-       "    SoilTemperatureE                  (station, time) float64 4.396 4.433 ...\n",
-       "    SoilMoistureE                     (station, time) float64 0.209 0.209 ..."
+       "    ScalarWindSpeedA                  (station, time) float64 nan nan nan ...\n",
+       "    SoilMoistureA                     (station, time) float64 nan nan nan ...\n",
+       "    UpwardSolarRadiation              (station, time) float64 nan nan nan ...\n",
+       "    DownwardSolarRadiation            (station, time) float64 nan nan nan ...\n",
+       "    AirtemperatureA                   (station, time) float64 nan nan nan ...\n",
+       "    UpwardTerrestrialRad              (station, time) float64 nan nan nan ...\n",
+       "    SnowDepthQCvalue                  (station, time) float64 nan nan nan ...\n",
+       "    SoilTemperatureE                  (station, time) float64 nan nan nan ...\n",
+       "    SoilMoistureC                     (station, time) float64 nan nan nan ...\n",
+       "    ScalarWindSpeedB                  (station, time) float64 nan nan nan ...\n",
+       "    SoilHeatFluxA                     (station, time) float64 nan nan nan ...\n",
+       "    WindDirectionatA                  (station, time) float64 nan nan nan ...\n",
+       "    SoilMoistureE                     (station, time) float64 nan nan nan ...\n",
+       "    SoilMoistureB                     (station, time) float64 nan nan nan ...\n",
+       "    DownwardTerrestrialRad            (station, time) float64 nan nan nan ...\n",
+       "    SnowDepthA                        (station, time) float64 nan nan nan ...\n",
+       "    SoilMoistureD                     (station, time) float64 nan nan nan ..."
       ]
      },
      "execution_count": 14,
